// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps demos > demo: Basic 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Clickable 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>
  <div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
    <!--v-if-->
  </div>
  <div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>
</div>"
`;

exports[`Steps demos > demo: CustomizedProgressDot 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object],[object Object]"></div>
</div>"
`;

exports[`Steps demos > demo: Error 1`] = `"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>"`;

exports[`Steps demos > demo: Icon 1`] = `"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object],[object Object]"></div>"`;

exports[`Steps demos > demo: LabelPlacement 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-vertical" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>
</div>"
`;

exports[`Steps demos > demo: Nav 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;" items="[object Object],[object Object],[object Object]"></div>
  <div class="ant-steps ant-steps-horizontal ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;" items="[object Object],[object Object],[object Object],[object Object]"></div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;" items="[object Object],[object Object],[object Object],[object Object]"></div>
</div>"
`;

exports[`Steps demos > demo: Progress 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>
<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>"
`;

exports[`Steps demos > demo: ProgressDot 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" progress-dot="" items="[object Object],[object Object],[object Object]"></div>
  <div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
    <!--v-if-->
  </div>
  <div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps" progress-dot="" items="[object Object],[object Object],[object Object],[object Object],[object Object]"></div>
</div>"
`;

exports[`Steps demos > demo: Simple 1`] = `"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>"`;

exports[`Steps demos > demo: Small 1`] = `
"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: SmallSize 1`] = `"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>"`;

exports[`Steps demos > demo: StepNext 1`] = `
"<div data-v-31fbda4a="">
  <div data-v-31fbda4a="" class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>
  <div data-v-31fbda4a="" class="steps-content">First-content</div>
  <div data-v-31fbda4a="" class="steps-action"><button data-v-31fbda4a="" class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Next</span>
    </button>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`Steps demos > demo: Vertical 1`] = `"<div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>"`;

exports[`Steps demos > demo: VerticalSmall 1`] = `"<div class="ant-steps ant-steps-vertical ant-steps-small" role="navigation" aria-label="Steps" items="[object Object],[object Object],[object Object]"></div>"`;
